2005-07-23  Andras Varga

	* cwatch.cc: WATCH implementation changed

	* added cstlwatch.cc

2005-04-27  Andras Varga

	* cobject.cc: fixed bug in cObject copy ctor. Problem hasn't surfaced
	earlier because no subclass used this ctor (they use op=) [reported by
	Shanti]

2005-04-21  Andras Varga

	* util.cc: implemented simtimeToStrShort().

	* cmessage.cc: changed cMessage::info() to display time *until* 
	arrivaltime as well

2005-04-05  Andras Varga

	* cstringtokenizer.cc: fix: prepared cStringTokenizer for receiving 
	NULL as input/delimiter string. [reported by Tom Parker]

2005-03-31  ------ omnetpp-3.1 released ------

2005-03-22  Andras Varga

	* cpar.cc: updated for changed cEnvir::getParameter() return type, see
	include/ChangeLog and src/envir/ChangeLog.

2005-03-19  Andras Varga

	* cdispstr.cc: fixed incorrect handling of terminating stray backlash
	during parsing

2005-03-18  Andras Varga

	* added cstrtokenizer.cc

2005-03-17  Andras Varga

	* cscheduler.cc: implemented executionResumed() in cRealtimeScheduler

2005-03-15  Andras Varga

	* cexception.cc: implemented cRuntimeError.

	* several files: changed throw new cException to throw new
	cRuntimeError.

	* new omnetpp.ini entry: 
	  [General]
	  debug-on-errors = true/false  (default: false)
	If turned on, errors will cause the program to break into the C++ 
	debugger. More previsely, cRuntimeError's constructor will do
	__asm int 3 (debugger interrupt) on Windows, and raise(SIGABRT)
	on other platforms (Linux, etc). This makes it possible to 
	investigate the context (stack frames, variables etc) of a runtime 
	error.

	* cmessage.cc: setControlInfo(), removeControlInfo(), destructor:
	control info isn't supposed to be a cObject, but if it is, call
	take() and drop() on it. [reported by Kurtis Kredo II]

2005-03-07  Andras Varga

	* chist.cc: changed to eliminate warnings about converting double to 
	int

2005-02-06  Andras Varga
